--- a/dev/verification/config_Verification.ini
+++ b/dev/verification/config_Verification.ini
@@ -12,7 +12,7 @@
 verifparameter=T2M
 ###parameter name in observation files
 obsparam=t2m_downscale
-###period we want to verify --> SAMOS/GMOS starts later thus starting mid-January
+###period we want to verify
 verificationperiod=20190101,20210630
 ###member --> this is the config file for deterministic verification
 ###we verify the control run here
@@ -22,20 +22,20 @@ averaging = False
 
 [TARGET]
 ###Targetfile path, one entry
-targetpath=/ssea/SSEA/C4E/DATA/TESTING/RAW/CERRA/t2m_cerra_{}_005deg.nc
+targetpath=/data/TESTING/RAW/CERRA/t2m_cerra_{}_005deg.nc
 
 [FORECASTMODELS]
 ###Post-processing models we are going to verify, multiple entries possible
 postpromodels=SAMOS
-postpromodelpaths=/ssea/SSEA/C4E/DATA/TESTING/SAMOS/postprocessed/samos-postprocessed_{}.nc
+postpromodelpaths=/data/TESTING/SAMOS/postprocessed/samos-postprocessed_{}.nc
 ###raw and interpolated S2S model --> one entry
 rawmodel=ERA5
-rawmodelpath=/ssea/SSEA/C4E/DATA/TESTING/RAW/ERA5/t2m_era5_{}_025deg.nc
+rawmodelpath=/data/TESTING/RAW/ERA5/t2m_era5_{}_025deg.nc
 
 
 [CLIMATOLOGY]
 ###climatology --> check, we might need to recalculate that one, one entry
-climpath=/ssea/SSEA/C4E/MODELS/UNET/DATA/CLIMS/CERRA_predi_clim_yhourmean.nc
+climpath=/data/TRAINING/CLIMS/CERRA_predi_clim_yhourmean.nc
 
 [SCORES]
 ###SCORES basefilename --> spatial
